Prueba de lobby

--- a/app/vistas/index.html
+++ b/app/vistas/index.html
@@ -5,19 +5,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <title>Página de Inicio</title>
+  <link rel="stylesheet" href="/app/vistas/style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <title>LOBBY</title>
 </head>
 
 <body>
   <div class="container">
     <div class="row mt-5">
       <div class="col-md-6 offset-md-3 text-center">
-        <img src="ruta/a/tu/imagen.jpg" alt="Imagen" class="img-fluid mb-4">
-        <a href="#" class="btn btn-primary mr-3">Botón 1</a>
-        <a href="#" class="btn btn-secondary">Botón 2</a>
+       
+        <div class="container2">
+          <button type="button" class="btn1">
+            INICIO <i class="fa fa-arrow-right ml-2"></i>
+          </button>
+        </div>
+        <div class="container3">
+          <button type="button" class="btn2">
+            REGISTRATE <i class="fa fa-arrow-right ml-2 "></i>
+          </button>
+        </div>
       </div>
     </div>
   </div>
+  
+ 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
