--- a/app/vistas/registro.html
+++ b/app/vistas/registro.html
@@ -4,21 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-
-    .custom-input {
-      box-shadow: 0px 0px 0px 7px rgba(127, 111, 129, 0.774);
-      -webkit-box-shadow: 0px 0px 0px 7px rgba(127, 111, 129, 0.774);
-      -moz-box-shadow: 0px 0px 0px 7px rgba(127, 111, 129, 0.774);
-    }
-    body {
-    background-image: url("../archivos/fondo.jpeg");
-    background-size: cover; /* Adjusts the image size to cover the container */
-    background-repeat: no-repeat; /* Prevents the image from repeating */
-    background-position: center center; /* Centers the image horizontally and vertically */
-    /* Additional background properties if needed */
-  }
-</style>
+  <link rel="stylesheet" href="{{ url_for('static', filename='estilos/styleRegistro.css') }}"/>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -57,3 +43,4 @@
   ></script>
 </body>
 </html>
+
