--- a/app/vistas/login.html
+++ b/app/vistas/login.html
@@ -4,13 +4,15 @@
  
   <title>Login</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='estilos/styleLogin.css') }}"/>
+  <link rel="stylesheet" href="/app/static/estilos/styleLogin.css">
 </head>
 <body>
     <section>
         <div class="form-box">
             <div class="form-value">
                 <form action="">
-                    <h2>Login</h2>
+                    <h2>VolleyScore</h2>
+                  
                     <div class="inputbox">
                         <ion-icon name="person"></ion-icon>
                         <input type="email" required>
