--- a/app/vistas/index.html
+++ b/app/vistas/index.html
@@ -2,37 +2,35 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="{{ url_for('static', filename='estilos/style.css') }}">
+  
   <title>LOBBY</title>
 </head>
 
 <body>
-  <div class="container">
-    <div class="">
-      <div class="">
-        <h1> "¡LOS HAIKYU!"</h1>
-        <!-- Contenedor de los botones -->
-        <div class="fixed-bottom-left">
-          <button type="button" class="btn1">
-            <a href="">INICIO</a>
-            <i class=""></i>
-          </button>
-          <button type="button" class="btn2">
-            <i class=""></i>
-          </button>
+  <div class="navbar">
+    <div class="container flex-nav">
+        <div class="nav-header">
+            <h2>Code <span>Brew</span></h2>
+            <button class="nav-toggle" id="navToggle">
+                <i class="fas fa-bars"></i>
+            </button>
         </div>
-      </div>
+        <nav class="nav-links" id="nav-links">
+            <ul>
+                <li class="nav-link"><a href="#">Home</a></li>
+                <li class="nav-link"><a href="#">Products</a></li>
+                <li class="nav-link"><a href="#">About</a></li>
+                <li class="nav-link"><a href="#"><span>Contact</span></a></li>
+            </ul>
+        </nav>
     </div>
-  </div>
- 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+</div>
+
+  
 </body>
 
 </html>
