--- a/app/vistas/index.html
+++ b/app/vistas/index.html
@@ -6,31 +6,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="{{ url_for('static', filename='estilos/style.css') }}">
-  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <title>LOBBY</title>
 </head>
 
 <body>
-  <div class="navbar">
-    <div class="container flex-nav">
-        <div class="nav-header">
-            <h2>Code <span>Brew</span></h2>
-            <button class="nav-toggle" id="navToggle">
-                <i class="fas fa-bars"></i>
-            </button>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">VolleyScore</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" href="#">Jugadores</a>
+              <a class="nav-link" href="#">Lista de Equipos</a>
+              <a class="nav-link" href="#">Salir</a>
+            </div>
+          </div>
         </div>
-        <nav class="nav-links" id="nav-links">
-            <ul>
-                <li class="nav-link"><a href="#">Home</a></li>
-                <li class="nav-link"><a href="#">Products</a></li>
-                <li class="nav-link"><a href="#">About</a></li>
-                <li class="nav-link"><a href="#"><span>Contact</span></a></li>
-            </ul>
-        </nav>
-    </div>
-</div>
+      </nav>
 
-  
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 
 </html>
