--- a/app/vistas/login.html
+++ b/app/vistas/login.html
@@ -3,6 +3,11 @@
 <head>
  
   <title>Login</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"" />
+  <meta name="format-detection" content="telephone=no">
+  <meta name="msapplication-tap-highlight" content="no">
   <link rel="stylesheet" href="{{ url_for('static', filename='estilos/styleLogin.css') }}"/>
   <link rel="stylesheet" href="/app/static/estilos/styleLogin.css">
 </head>
