--- a/app/vistas/contraseña.html
+++ b/app/vistas/contraseña.html
@@ -2,8 +2,14 @@
 <html lang="en">
 <head>
  
-  <title>Forget password</title>
+ 
+   <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"" />
+  <meta name="format-detection" content="telephone=no">
+  <meta name="msapplication-tap-highlight" content="no">
   <link rel="stylesheet" href="{{ url_for('static', filename='estilos/styleLogin.css') }}"/>
+  <title>Forget password</title>
 </head>
 <body>
     <section>
