--- a/app/vistas/registro.html
+++ b/app/vistas/registro.html
@@ -16,34 +16,39 @@
   <title>Registro</title>
 </head>
 <body class="bg-black custom-background">
-  <div class="container mt-5 pt-5">
-    <h1 class="text-center text-white">Registrate</h1>
-  </div>
-  <div class="d-flex flex-column align-items-center justify-content-center min-vh-80 pt-5">
-    <form action="/registro" method="post">
-      <div class="mb-5">
-        <input type="text" name="nombre" class="form-control custom-input" id="exampleFormControlInput1" placeholder="Nombre de Usuario" required>
-      </div>
-      <div class="mb-5">
-        <input type="password" name="contrasenia" class="form-control custom-input" id="exampleFormControlInput1" placeholder="Contraseña" required>
-      </div>
-      <select class="form-select custom-input mb-5" name = "sexo" aria-label="Default select example" required>
-        <option value = "" selected disabled>Sexo</option>
-        <option value="0">Mujer</option>
-        <option value="1">Hombre</option>
-        <option value="3">Gamer</option>
-      </select>
-      <div class="mt-5 d-flex flex-column align-items-center justify-content-center">
-      <button type="submit" class="btn btn-primary">Registrame</button>
-      <a href="{{ url_for('inicio') }}">Inicio</a>
-      </div>
+
+  <section>
+    <div class="form-box">
+        <div class="form-value">
+            <form action="">
+                <h2 >Registrate</h2>
+                <div class="inputbox">
+                    <ion-icon name="person"></ion-icon>
+                    <input type="email" required>
+                    <label for="">Nombre de usuario</label>
+                </div>
+                <div class="inputbox">
+                    <ion-icon name="lock-closed-outline"></ion-icon>
+                    <input type="password" required>
+                    <label for="">Contraseña</label>
+                </div>
+                <div class="">
+                  <select name="" class="inputbox">
+                    <option value = "0" selected disabled>Sexo</option>
+                    <option value="1">Mujer</option>
+                    <option value="2">Hombre</option>
+                  </select>
+                </div>
+
+                <button> <a href="#">Registrarme</a></button>
+                <br>
+            </form>
+        </div>
     </div>
-  </form>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"
-  ></script>
+</section>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 </body>
 </html>
 
