Agregacion de ultimas paginas

--- a/app/vistas/registro.html
+++ b/app/vistas/registro.html
@@ -40,7 +40,7 @@
                   </select>
                 </div>
 
-                <button> <a href="#">Registrarme</a></button>
+                <button> <a href="{{ url_for('inicio') }}">Registrarme</a></button>
                 <br>
             </form>
         </div>
