--- a/app/vistas/listaDeEquipos.html
+++ b/app/vistas/listaDeEquipos.html
@@ -11,26 +11,65 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='estilos/style.css') }}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   
-    <title>Lista de equipos</title>
+  <style>
+    .table-container {
+      overflow-x: auto;
+    }
+  </style>
+  
+  <title>Lista de equipos</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">VolleyScore</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link" href="{{ url_for('jugadores') }}">Jugadores</a>
-              <a class="nav-link" href="{{ url_for('listaDeEquipos') }}">Lista de Equipos</a>
-              <a class="nav-link" href="#">Salir</a>
-            </div>
-          </div>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">VolleyScore</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link" href="{{ url_for('jugadores') }}">Jugadores</a>
+          <a class="nav-link" href="{{ url_for('listaDeEquipos') }}">Lista de Equipos</a>
+          <a class="nav-link" href="#">Salir</a>
         </div>
-      </nav>
-      
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+      </div>
+    </div>
+  </nav>
 
+  <div class="container">
+    <div class="table-container">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Equipo</th>
+            <th scope="col">Ganados</th>
+            <th scope="col">Perdidos</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Equipo 1</td>
+            <td>10</td>
+            <td>5</td>
+            <td>3</td>
+          </tr>
+          <tr>
+            <td>Equipo 2</td>
+            <td>8</td>
+            <td>4</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>Equipo 3</td>
+            <td>6</td>
+            <td>3</td>
+            <td>5</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
