--- a/app/vistas/login.html
+++ b/app/vistas/login.html
@@ -20,12 +20,12 @@
                   
                     <div class="inputbox">
                         <ion-icon name="person"></ion-icon>
-                        <input type="email" required>
-                        <label for="">Usuario</label>
+                        <input type="text" name="nombre required>
+                        <label>Usuario</label>
                     </div>
                     <div class="inputbox">
                         <ion-icon name="lock-closed-outline"></ion-icon>
-                        <input type="password" required>
+                        <input type="password" name="contrasenia" required>
                         <label for="">Contraseña</label>
                     </div>
                     <div class="forget">
