Creacion de equipo, boton y modificacion en el menu principal

--- a/app/vistas/login.html
+++ b/app/vistas/login.html
@@ -20,7 +20,7 @@
                   
                     <div class="inputbox">
                         <ion-icon name="person"></ion-icon>
-                        <input type="text" name="nombre required>
+                        <input type="text"  required>
                         <label>Usuario</label>
                     </div>
                     <div class="inputbox">
