--- a/app/vistas/listaDeEquipos.html
+++ b/app/vistas/listaDeEquipos.html
@@ -22,7 +22,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">VolleyScore</a>
+      <a class="navbar-brand" href="{{ url_for('inicio') }}">VolleyScore</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -47,23 +47,17 @@
           </tr>
         </thead>
         <tbody>
+          {%for row in listaEquipos%}
           <tr>
-            <td>Equipo 1</td>
-            <td>10</td>
-            <td>5</td>
-            <td>3</td>
+            <td>{{ row[1] }}</td>
+            <td></td>
+            <td></td>
           </tr>
+          {% endfor %}
           <tr>
-            <td>Equipo 2</td>
-            <td>8</td>
-            <td>4</td>
-            <td>4</td>
-          </tr>
-          <tr>
-            <td>Equipo 3</td>
-            <td>6</td>
-            <td>3</td>
-            <td>5</td>
+            <td colspan="3" class="text-left">
+              <button name="crear equipo"  class="btn btn-primary"> <a class="nav-link" href="{{ url_for('crearEquipo') }}">Crear Equipo</a></button>
+            </td>
           </tr>
         </tbody>
       </table>
