--- a/app/vistas/crearEquipo.html
+++ b/app/vistas/crearEquipo.html
@@ -30,7 +30,11 @@
       </div>
     </div>
   </nav>
-
+  <form action="/crearEquipo"  method="post">
+    <p>Nombre del equipo</p>
+    <input type="text" name = "nombre">
+    <button type="submit">Agregar</button>
+  </form>
  
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
